[package]
name = "anti_entropy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
gethostname = "0.4.3"
lazy_static = "1.4.0"
merkle_tree = { path = "../merkle_tree" }
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

[dev-dependencies]
actix-test = "0.1.2"
