[package]
name = "paxos_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
futures = "0.3.28"
futures-util = "0.3.28"
gethostname = "0.4.3"
lazy_static = "1.4.0"
reqwest = "0.11.22"
serde_json = "1.0.107"

[dependencies.serde]
version = '^1'
features = ['derive']
