[package]
name = "paxos_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
futures = "0.3.28"
futures-util = "0.3.28"
gethostname = "0.4.3"
lazy_static = "1.4.0"
serde_json = "1.0.107"

[dependencies.serde]
version = "^1"
features = ["derive"]

[dependencies.reqwest]
version = "^0"
features = ["json"]

[dev-dependencies]
actix-test = "0.1.2"
mockito = "1.2.0"
tokio = "1.33.0"
